--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -4,26 +4,19 @@
 
 img{
   max-width: 100%;
-  height: auto;
+  max-height: 100%;
 }
 
 .formulario-login input {
   display: block;
 }
 
-.link {
-  margin-top: 5px;
-  display: block;
-  text-decoration: underline;
+.link u {
   font-size: 90%;
-  text-align: center;
-  text-decoration-color: white;
-  color: white;
+  text-align: center
 }
 
-.link:hover {
-color: lightgray;
-text-decoration-color: lightgray;
+.link:hover u {
 cursor: pointer;
 }
 
