--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -119,6 +119,14 @@ html, body {
     background-color:#f1f1f1;
 }
 
+.funcionamento p {
+    text-align: center;
+    margin: 0;
+}
+.funcionamento {
+    margin-bottom: 5px;
+}
+
 @media only screen and (max-width: 420px){
     h1 {
         font-size: 22px;
