--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -48,6 +48,7 @@ html, body {
     background: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
+    width: 190px;
     height: 32px;
     padding: 0 15px;
     font-size: 14px;
