--- a/src/styles/RecuSenha.css
+++ b/src/styles/RecuSenha.css
@@ -12,7 +12,7 @@ h1 {
     margin: 10px;
   }
 
-  h2{
+  .subtitulo{
     color: white;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
