--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -141,6 +141,31 @@ html, body {
     margin-bottom: 5px;
 }
 
+.agendar {
+    margin:  0 auto;
+    margin-top: 10px;
+    background: #FF8C00;
+    border-radius: 5px;
+    height: 30px;
+    width: 84px;
+    border: 0;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 16px;
+    display: block;
+}
+
+.center {
+    max-width: 30%;
+    margin: auto;
+    border-radius: 100%;
+  }
+  
+.agendar:hover {
+    background: #FFA500	;
+}
+
 @media only screen and (max-width: 420px){
     h1 {
         font-size: 22px;
