Postagens, tags e galeria

--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -16,7 +16,7 @@ html, body {
 }
 
 .logo{
-    margin: 20px 140px 20px 0px;
+    margin: 30px;
 }
 
 .wrapper-form {
@@ -165,6 +165,26 @@ html, body {
     background: #FFA500	;
 }
 
+.gallery {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-width: 33%;
+    -moz-column-width: 33%;
+    column-width: 33%;
+}
+
+.gallery .pics {
+    -webkit-transition: all 350ms ease;
+    transition: all 350ms ease;
+}
+
+.gallery .animation {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1); 
+}
+
 @media only screen and (max-width: 420px){
     h1 {
         font-size: 22px;
@@ -177,4 +197,12 @@ html, body {
         max-width: 100%;
         margin-right: 0px;
     }
+    .gallery {
+        -webkit-column-count: 1;
+        -moz-column-count: 1;
+        column-count: 1;
+        -webkit-column-width: 100%;
+        -moz-column-width: 100%;
+        column-width: 100%;
+        }
 }
