--- a/src/styles/PerfilEstudio.css
+++ b/src/styles/PerfilEstudio.css
@@ -10,6 +10,10 @@
     text-align: center;
 }
 
+.post {
+    resize:none;
+}
+
 .mod-card-back-title.is-editing,.mod-card-back-title:focus{
     background:#fff;
     border:none;
