Postagens, tags e galeria

--- a/src/styles/PerfilEstudio.css
+++ b/src/styles/PerfilEstudio.css
@@ -10,6 +10,12 @@
     text-align: center;
 }
 
+.image-title {
+    text-align: left;
+    font-size: 20px;
+    width: 100%;
+}
+
 .post {
     resize:none;
 }
