--- a/src/styles/PerfilTatuador.css
+++ b/src/styles/PerfilTatuador.css
@@ -12,7 +12,6 @@
     margin-top: 10px;
     background: #fff;
     border: 1px solid #ddd;
-    border-radius: 5px;
     height: 26px;
     padding: 0 5px;
     font-size: 14px;
@@ -21,7 +20,6 @@
 .inputs button {
     margin-top: 10px;
     background: #FF8C00;
-    border-radius: 5px;
     height: 26px;
     width: 64px;
     border: 0;
@@ -29,4 +27,22 @@
     font-weight: bold;
     cursor: pointer;
     font-size: 14px;
+}
+
+.cad-estudio {
+    margin: auto;
+    background: #FF8C00;
+    border-radius: 5px;
+    height: 30px;
+    width: 145px;
+    border: 0;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 16px;
+    display: block;
+}
+  
+.cad-estudio:hover {
+    background: #FFA500	;
 }
