--- a/src/styles/Notifications.css
+++ b/src/styles/Notifications.css
@@ -68,7 +68,7 @@
     transition: 0.5s;
     position: absolute;
     overflow-y: scroll;
-    z-index: 1;
+    z-index: 2;
     padding: 0px;
     left: -330px;
     margin-top: 5px;
@@ -85,7 +85,7 @@
   }
   
   .notBtn:hover > .box{
-    height: 40vh
+    height: 50vh
   }
 
   .notBtn{
@@ -142,4 +142,11 @@
   }
 
   .fa-bell:before{content:"\f0f3"}
+
+  @media only screen and (max-width: 420px){
+    .box {
+        width: 320px;
+        left: -170px;
+    }
+  }
   
