--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -59,6 +59,13 @@ html, body {
     font-size: 14px;
 }
 
+.formulario .fix-link {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    height: 32px;
+    font-size: 14px;
+}
+
 .formulario select {
     background: #fff;
     border: 1px solid #ddd;
