fotos de perfil

--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -13,7 +13,7 @@ html, body {
     overflow: hidden;
     position: relative;
     display: table;
-    background-image: url(../images/RM_11.png)
+    background-image: url(../images/background.jpg)
 }
 
 .show {
