--- a/src/styles/Agenda.css
+++ b/src/styles/Agenda.css
@@ -71,3 +71,13 @@
 .agenda button:hover {
   background: #FFA500	;
 }
+
+.agenda select {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  width: 190px;
+  height: 32px;
+  padding: 0 15px;
+  font-size: 14px;
+}
