Alter follaw process, add .env .gitignore

--- a/src/styles/Mapa.css
+++ b/src/styles/Mapa.css
@@ -14,7 +14,7 @@
     background: #FF8C00;
     border-radius: 5px;
     height: 30px;
-    width: 84px;
+    width: auto;
     border: 0;
     color: #fff;
     font-weight: bold;
