--- a/src/styles/PerfilEstudio.css
+++ b/src/styles/PerfilEstudio.css
@@ -49,7 +49,7 @@
     background: #FF8C00;
     border-radius: 5px;
     height: 30px;
-    width: 145px;
+    width: auto;
     border: 0;
     color: #fff;
     font-weight: bold;
